--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="HTTrack is an easy-to-use website mirror utility. It allows you to download a World Wide website from the Internet to a local directory,building recursively all structures, getting html, images, and other files from the server to your computer. Links are rebuiltrelatively so that you can freely browse to the local site (works with any browser). You can mirror several sites together so that you can jump from one toanother. You can, also, update an existing mirror site, or resume an interrupted download. The robot is fully configurable, with an integrated help" />
 	<meta name="keywords" content="httrack, HTTRACK, HTTrack, winhttrack, WINHTTRACK, WinHTTrack, offline browser, web mirror utility, aspirateur web, surf offline, web capture, www mirror utility, browse offline, local  site builder, website mirroring, aspirateur www, internet grabber, capture de site web, internet tool, hors connexion, unix, dos, windows 95, windows 98, solaris, ibm580, AIX 4.0, HTS, HTGet, web aspirator, web aspirateur, libre, GPL, GNU, free software" />
-	<title>Local index - HTTrack Website Copier</title>
-  <!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+	<title>Local index - HTTrack</title>
+
 	<style type="text/css">
 	<!--
 
@@ -103,9 +103,8 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="cvresumetemplate.com/Ansar-personal-resume/home-one.html">
-						Maha - Personal CV/Resume Template | Home 1
-					</A>		
+					<A HREF="cv/Ansar/home-one.html">
+Ansar 					</A>		
 			</TD>
 		</TR>
 	</TABLE>
@@ -113,11 +112,10 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<BR>
 	<BR>
   	<H6 ALIGN="RIGHT">
-	<I>Mirror and index made by HTTrack Website Copier [XR&amp;CO'2008]</I>
+	<I>Ansar</I>
 	</H6>
-	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=cvresumetemplate.com/Ansar-personal-resume/home-one.html">
+	
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=cv/Ansar/home-one.html">
 
 
 <!-- ==================== Start epilogue ==================== -->
@@ -133,7 +131,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%" border="0" align="center" valign="bottom" cellspacing="0" cellpadding="0">
 	<tr>
-	<td id="footer"><small>&copy; 2008 Xavier Roche & other contributors - Web Design: Leto Kauler.</small></td>
+	<td id="footer"><small>&copy; Ansar Web Resume </small></td>
 	</tr>
 </table>
 
