--- a/cv/Ansar/home-one-w.html
+++ b/cv/Ansar/home-one-w.html
@@ -515,7 +515,7 @@ Batch Monitoring</p>
                                     <span>Advance Customer Support Engineer, Oracle</span>
                                 </div>
                             </div>
-                            <div class="each-client-item">
+                    <!--        <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
                                     <img src="assets/images/c-1.png" alt="" class="img-fluid">
                                     <p>Absolute wonderful ! I am completely
@@ -535,7 +535,7 @@ Batch Monitoring</p>
                                     <h4>John Mike</h4>
                                     <span>CEO, Author.Inc</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
