--- a/cv/Ansar/home-one-w.html
+++ b/cv/Ansar/home-one-w.html
@@ -340,7 +340,7 @@
                                     <!-- Education Institutes-->
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <h4>Bachelors in Information Technology</h4>
-										<h7><a href="#">Visrtual University of Pakistan</a></h7>
+										<h7><a href="#">Virtual University of Pakistan</a></h7>
                                         <div class="mh-eduyear">2014-2018</div>
                                         
                                     </div>                                
