--- a/cv/Ansar/home-one.html
+++ b/cv/Ansar/home-one.html
@@ -156,7 +156,8 @@
                         <div class="mh-about-inner">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
                             <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m Ansar, Advance Support Engineer at Oracle. 
-                            I have rich experience with Oracle Database Administration, strong Technical, Analytical, System Study, Design, Development, and production, Incident Analysis& resolution, and RCA related to Siebel Application, Problem-Solving skills with the ability to execute and deliver tasks on schedule.</p>
+                            I have rich experience with Oracle Database Administration, strong Technical, Analytical, System Study, Design, Development, and production, Incident Analysis& resolution, and RCA related to Siebel Application, Problem-Solving skills with the ability to execute and deliver tasks on schedule. Review and repair the OLTP code and responsible for analysis of current Procedures including performance, diagnosis and troubleshooting of problem programs, and designing solutions to problematic programming problems
+</p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
                                     <li><span>Oracle Database Administration</span></li>
