--- a/cv/Ansar/home-one.html
+++ b/cv/Ansar/home-one.html
@@ -500,7 +500,7 @@ Batch Monitoring</p>
                         </div>
                         <div class="col-sm-12 mh-footer-address">
                             <div class="row">
-                                <div class="col-sm-12 col-md-4">
+                                <!--  <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
                                             <i class="fa fa-location-arrow"></i>
@@ -513,7 +513,7 @@ Batch Monitoring</p>
                                             </address>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                         <div class="each-icon">
