--- a/home-one-w.html
+++ b/home-one-w.html
@@ -553,11 +553,11 @@ Batch Monitoring</p>
             <div class="map-image image-bg">
                 <div class="container">
                     <div class="row section-separator">
-                        <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                        <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s" class="center">
                             <h3>Contact Me</h3>
                         </div>
                         <div class="col-sm-12 mh-footer-address">
-                            <div class="center">
+                            <div class="row">
                                 <!--  <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
