--- a/home-one-w.html
+++ b/home-one-w.html
@@ -551,7 +551,7 @@ Batch Monitoring</p>
         -->
        <footer class="mh-footer" id="mh-contact">
             <div class="map-image image-bg">
-                <div class="container">
+                <div class="container" class="center">
                     <div class="row section-separator" class="center">
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s" class="center">
                             <h3>Contact Me</h3>
