--- a/home-one-w.html
+++ b/home-one-w.html
@@ -549,8 +549,8 @@ Batch Monitoring</p>
            FOOTER 1
         ===================
         -->
-       <footer class="mh-footer" id="mh-contact">
-            <div class="map-image image-bg">
+       <footer class="mh-footer" id="mh-contact"class="center">
+            <div class="map-image image-bg"class="center">
                 <div class="container" class="center">
                     <div class="row section-separator" class="center">
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s" class="center">
