--- a/home-one.html
+++ b/home-one.html
@@ -498,9 +498,9 @@ Batch Monitoring</p>
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                             <h3>Contact Me</h3>
                         </div>
-                                <!-- <div class="col-sm-12 mh-footer-address">
+                        <div class="col-sm-12 mh-footer-address">
                             <div class="row">
-                         <div class="col-sm-12 col-md-4">
+                                <!--  <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
                                             <i class="fa fa-location-arrow"></i>
