--- a/cv/Ansar/home-one.html
+++ b/cv/Ansar/home-one.html
@@ -605,7 +605,7 @@ Batch Monitoring</p>
       After neccessary customization/modification, Please minify 
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
-    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
+    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO 
     <link rel="stylesheet" href="demo/demo.css">
     <script type="text/javascript" src="demo/styleswitcher.js"></script>
     <script type="text/javascript" src="demo/demo.js"></script>
@@ -650,7 +650,7 @@ Batch Monitoring</p>
     </ul>
     <div class="config-title">
         Colors :
-    </div>-->
+    </div>
     <ul class="styles">
         <li><a href="#" onclick="setActiveStyleSheet('blue'); return false;" title="Blue">
             <div class="blue"></div></a>
