--- a/cv/Ansar/home-one.html
+++ b/cv/Ansar/home-one.html
@@ -498,10 +498,10 @@ Batch Monitoring</p>
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                             <h3>Contact Me</h3>
                         </div>
-                                 <div class="col-sm-12 mh-footer-address">
+                        <div class="col-sm-12 mh-footer-address">
                             <div class="row">
-                     <!--    <div class="col-sm-12 col-md-4">
-                                    <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
+                                 <div class="col-sm-12 col-md-4">
+                                  <!--  <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
                                             <i class="fa fa-location-arrow"></i>
                                         </div>
@@ -605,7 +605,7 @@ Batch Monitoring</p>
       After neccessary customization/modification, Please minify 
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
-    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO 
+    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
     <link rel="stylesheet" href="demo/demo.css">
     <script type="text/javascript" src="demo/styleswitcher.js"></script>
     <script type="text/javascript" src="demo/demo.js"></script>
@@ -650,7 +650,7 @@ Batch Monitoring</p>
     </ul>
     <div class="config-title">
         Colors :
-    </div>
+    </div>-->
     <ul class="styles">
         <li><a href="#" onclick="setActiveStyleSheet('blue'); return false;" title="Blue">
             <div class="blue"></div></a>
