--- a/home-one-w.html
+++ b/home-one-w.html
@@ -549,16 +549,16 @@ Batch Monitoring</p>
            FOOTER 1
         ===================
         -->
-       <footer class="mh-footer" id="mh-contact"class="center">
-            <div class="map-image image-bg"class="center">
-                <div class="container" class="center">
-                    <div class="row section-separator" class="center">
-                        <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s" class="center">
+        <footer class="mh-footer" id="mh-contact">
+            <div class="map-image image-bg">
+                <div class="container">
+                    <div class="row section-separator">
+                        <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                             <h3>Contact Me</h3>
                         </div>
-                               <div class="col-sm-12 mh-footer-address">
+                        <div class="col-sm-12 mh-footer-address">
                             <div class="row">
-                                <!--  <div class="col-sm-12 col-md-4">
+                                <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
                                             <i class="fa fa-location-arrow"></i>
@@ -571,7 +571,7 @@ Batch Monitoring</p>
                                             </address>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                         <div class="each-icon">
@@ -608,10 +608,9 @@ Batch Monitoring</p>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="social-icon">
-<li><a href="https://www.facebook.com/Azaan.chauhdary.5">
-<i class="fa fa-facebook"></i></a></li>
+<li><a href="https://www.facebook.com/Azaan.chauhdary.5"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="https://twitter.com/_VladImpaler"><i class="fa fa-twitter"></i></a></li>
-                               <!--     <li><a href="#"><i class="fa fa-github"></i></a></li> -->
+                                  <!--  <li><a href="#"><i class="fa fa-github"></i></a></li>-->
                                     <li><a href="https://www.linkedin.com/in/ansar-nawaz-635084151"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                     </ul>
                                 </div>
@@ -620,7 +619,7 @@ Batch Monitoring</p>
                     </div>
                 </div>
             </div>
-        </footer>     
+        </footer>   
     
     <!--
     ==============
