--- a/index.html
+++ b/index.html
@@ -491,16 +491,16 @@ Batch Monitoring</p>
            FOOTER 1
         ===================
         -->
-        <footer class="mh-footer" id="mh-contact">
+          <footer class="mh-footer" id="mh-contact">
             <div class="map-image image-bg">
                 <div class="container">
                     <div class="row section-separator">
                         <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                             <h3>Contact Me</h3>
                         </div>
-                            <!--     <div class="col-sm-12 mh-footer-address">
+                        <div class="col-sm-12 mh-footer-address">
                             <div class="row">
-                              <!--  <div class="col-sm-12 col-md-4">
+                                <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
                                             <i class="fa fa-location-arrow"></i>
@@ -513,7 +513,7 @@ Batch Monitoring</p>
                                             </address>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="col-sm-12 col-md-4">
                                     <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                         <div class="each-icon">
@@ -561,7 +561,7 @@ Batch Monitoring</p>
                     </div>
                 </div>
             </div>
-        </footer>     
+        </footer>    
     
     <!--
     ==============
