--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ Batch Monitoring</p>
                             <h3>Contact Me</h3>
                         </div>
                         <div class="col-sm-12 mh-footer-address">
-                            <div class="row">
+                            <div class="row" class= "center">
                               <!--  <div class="col-sm-12 col-md-4">
                                <!--    <div class="mh-address-footer-item dark-bg shadow-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                         <div class="each-icon">
