--- a/home-one-w.html
+++ b/home-one-w.html
@@ -517,16 +517,15 @@ Batch Monitoring</p>
                                     <span>Advance Customer Support Engineer, Oracle</span>
                                 </div>
                             </div>
-                    <!--        <div class="each-client-item">
+                   <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
-                                    <img src="assets/images/c-1.png" alt="" class="img-fluid">
-                                    <p>Absolute wonderful ! I am completely
-                                    blown away.The very best.I was amazed
-                                    at the quality</p>
-                                    <h4>John Mike</h4>
-                                    <span>CEO, Author.Inc</span>
+                                    <img src="assets/images/hmalk.jpg" alt="" style="width:105px;height:105px;  class="img-fluid">
+                                    <p>He is a very Good Resource with Strong IT Skills, Also he is very intelligent and Hard-worker .</p>
+                                    <h4>Hamza Malik</h4>
+                                    <span>Advance Customer Support Engineer, Oracle</span>
                                 </div>
                             </div>                    
+                      <!--                       
                             
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
@@ -675,7 +674,7 @@ Batch Monitoring</p>
             <h4>Theme Modes</h4>
             <ul>
                 <li>
-                    <a href="home-one.html"> <img src="assets/images/h1w.png" alt="" class="img-fluid"></a>
+                    <a href="index.html"> <img src="assets/images/h1w.png" alt="" class="img-fluid"></a>
                 </li>
                 <li>
                     <a href="home-one-w.html"> <img src="assets/images/h1.png" alt="" class="img-fluid"></a>
