--- a/index.html
+++ b/index.html
@@ -459,17 +459,15 @@ Batch Monitoring</p>
                                     <span>Advance Customer Support Engineer, Oracle</span>
                                 </div>
                             </div>
-                      <!--      <div class="each-client-item">
+                           <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
-                                    <img src="assets/images/c-1.png" alt="" class="img-fluid">
-                                    <p>Absolute wonderful ! I am completely
-                                    blown away.The very best.I was amazed
-                                    at the quality</p>
-                                    <h4>John Mike</h4>
-                                    <span>CEO, Author.Inc</span>
+                                    <img src="assets/images/hmalk.jpg" alt="" style="width:105px;height:105px;  class="img-fluid">
+                                    <p>He is a very Good Resource with Strong IT Skills, Also he is very intelligent and Hard-worker .</p>
+                                    <h4>Hamza Malik</h4>
+                                    <span>Advance Customer Support Engineer, Oracle</span>
                                 </div>
                             </div>                    
-                            
+                      <!--      
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
                                     <img src="assets/images/c-1.png" alt="" class="img-fluid">
