--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ Batch Monitoring</p>
       After neccessary customization/modification, Please minify 
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
-     STYLE SWITCH STYLESHEET ONLY FOR DEMO 
+    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO 
     <link rel="stylesheet" href="demo/demo.css">
     <script type="text/javascript" src="demo/styleswitcher.js"></script>
     <script type="text/javascript" src="demo/demo.js"></script>
@@ -614,7 +614,7 @@ Batch Monitoring</p>
         <li class="mh-demo-styles"> 
             <h4>Theme modes</h4>
             <ul>
-                                   <a href="index.html"> <img src="assets/images/h1w.png" alt="" class="img-fluid"></a>
+                                   <a href="home-one.html"> <img src="assets/images/h1w.png" alt="" class="img-fluid"></a>
                     <a href="home-one-w.html"> <img src="assets/images/h1.png" alt="" class="img-fluid"></a>
                            </ul>
         </li>
@@ -639,8 +639,8 @@ Batch Monitoring</p>
                 <li>
                     <a href="home-rtl-w.html"> <img src="assets/images/h3.png" alt="" class="img-fluid"></a>
                 </li>
-            </ul> 
-        </li>         -->       
+            </ul>
+        </li>                
     </ul>
     <div class="config-title">
         Colors :
@@ -673,6 +673,6 @@ Batch Monitoring</p>
     </ul>
     </div>
     </div>
-	</body>
+	</body>-->
 
 </html>
