--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                                 </div>
                                 
                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Ansar Nawaz</h2>
-                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Advance Support Engineer <p style="padding-top=3px;"><img src="assets/images/oralogo.png" alt="" style="width:125px;height:35px; data-wow-duration="0.8s" data-wow-delay="0.3s" class="img-fluid"></p></h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Advance Support Engineer 
+								<p><img src="assets/images/oralogo.png" alt="" style="width:125px;height:35px; data-wow-duration="0.8s" data-wow-delay="0.3s" class="img-fluid"></p></h4>
 
 													<!--	<p><img src="assets/images/oralogo.png" alt="" style="width:125px;height:45px;  data-wow-duration="0.8s" data-wow-delay="0.3s" class="img-fluid"></p>
             -->
