--- a/home-one-w.html
+++ b/home-one-w.html
@@ -121,7 +121,7 @@
                                 <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                     <li><a href="https://www.facebook.com/Azaan.chauhdary.5/"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="https://twitter.com/_VladImpaler"><i class="fa fa-twitter"></i></a></li>
-                                   <!-- <li><a href="#"><i class="fa fa-github"></i></a></li> -->
+                                    <li><a href="https://github.com/ansarnawaz/"><i class="fa fa-github"></i></a></li> 
                                     <li><a href="https://www.linkedin.com/in/ansar-nawaz-635084151/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
