--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ Batch Monitoring</p>
       After neccessary customization/modification, Please minify 
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
-    <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO 
+     STYLE SWITCH STYLESHEET ONLY FOR DEMO 
     <link rel="stylesheet" href="demo/demo.css">
     <script type="text/javascript" src="demo/styleswitcher.js"></script>
     <script type="text/javascript" src="demo/demo.js"></script>
